--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,10 @@
 }
 
 .header{
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: auto;
   display: flex;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
 }
@@ -29,6 +30,7 @@
   width: 500px;
   height: 400px;
   display: flex;
+  margin-top: -20px;
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
@@ -46,5 +48,19 @@
   border: none;
   border-radius: 2px;
   background-color: #FFFFFF;
+}
+
+.form-button{
+  width: 92%;
+  height: 50px;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 0;
+  border: none;
+  color: #FFFFFF;
+  font-size: 18px;
+  cursor: pointer;
+  background-color: #77be22;
 }
 /* verde #77be22 azul #003765*/
