--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,13 +3,13 @@
 *{
   margin: 0px;
   padding: 0px;
-  background-color: #003765;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .app{
   width: 100%;
-  height: auto;
+  height: 100vh;
+  background-color: #003765;
 }
 
 .header{
